@@ -1,12 +1,12 @@
 ---
 name: Math-BigInt-GMP
 author: Tels
-version: 1.24
+version: 1.25
 version_from: lib/Math/BigInt/GMP.pm
 license: perl
 distribution_type: module
-generated_by: Math-BigInt-GMP version 1.24
+generated_by: Math-BigInt-GMP version 1.25
 installdirs: site
 requires:
-  Math::BigInt: 1.87
+  Math::BigInt: 1.9
   XSLoader: 0.02
