@@ -1,3 +1,5 @@
+2010-09-10 v1.25 rafl 5536 tests
+  * Fix tests with Math::BigInt >= 1.90 and depend on it.
 
 2007-07-31 v1.24 Tels 5530 tests
   * apply patch for warnings about ptr size mismatch under Cygwin (thanx Reini Urban!)
